--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Revision history for Perl extension Math::Histogram.
 
+1.01  Fri Jun 22 08:00:00 2012
+  - 5.8 compatibility
+  - Win32 debug output in some tests
+  - Histogram (de-)serialization
+
 1.00  Thu Jun 21 10:25:00 2012
   - original version
