--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Math::Histogram.
 
+1.02  Sun Jun 24 19:30:00 2012
+  - Distribution fixes
+
 1.01  Fri Jun 22 08:00:00 2012
   - 5.8 compatibility
   - Win32 debug output in some tests
